// Code generated by go2proto. DO NOT EDIT.
syntax = "proto3";

package xyz.block.ftl.cron.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/block/ftl/backend/protos/xyz/block/ftl/cron/v1;cronpb";

// CronState is the state of scheduled cron jobs
message CronState {
  map<string, google.protobuf.Timestamp> last_executions = 1;
  map<string, google.protobuf.Timestamp> next_executions = 2;
}
